Fix mobile menu button display: Change media query to show on mobile devices

--- a/_sass/components/_mobile-menu.scss
+++ b/_sass/components/_mobile-menu.scss
@@ -2,7 +2,7 @@
 
 // ハンバーガーボタン
 .mobile-menu-btn {
-  display: flex;
+  display: none; // デフォルトは非表示
   flex-direction: column;
   justify-content: space-around;
   width: 30px;
@@ -14,8 +14,9 @@
   position: relative;
   z-index: 1002;
   
-  @media (min-width: 1024px) {
-    display: none;
+  // モバイル表示で表示
+  @media (max-width: 1023px) {
+    display: flex;
   }
   
   span {
